feat 唯一索引不使用 nullable 列